fixed horizontal scroll bar on contact page

--- a/css/contact.css
+++ b/css/contact.css
@@ -35,7 +35,7 @@
     #fs-frm #card-element {
       border: 1px solid rgba(0,0,0,0.2);
       background-color: rgba(255,255,255,0.9);
-      padding: .75em 1rem;
+    
       margin-bottom: 1.5rem;
     }
     #fs-frm input:focus,
